cmake_minimum_required(VERSION 3.5.0)

add_subdirectory(schedulers)
set(HAILORT_GENAI_TEXT2IMAGE_COMPONENTS_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/text_encoder.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/denoiser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/text2image_server.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/single_io_model.cpp
    ${TEXT2IMAGE_SCHEDULERS_SOURCES}
)
set(HAILORT_GENAI_TEXT2IMAGE_COMPONENTS_SOURCES ${HAILORT_GENAI_TEXT2IMAGE_COMPONENTS_SOURCES} PARENT_SCOPE)